changed with of table to stop overlapping

--- a/frontend/weather_cloud_react/src/App.css
+++ b/frontend/weather_cloud_react/src/App.css
@@ -77,7 +77,7 @@ h1 {
 
 .sensorGrid{
     height: 90%;
-    width: 100%;
+    width: 95%;
     padding: 1em;
     max-width: 1000px;
     max-height: 800px;
